src/objects/Assessment_Response__c.object
<CustomObject>
    <description>ASSESSMENT  - Individual score valiues for a person&apos;s assessmemt</description>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assessment_Domain_Result__c</fullName>
        <label>Assessment Domain Result</label>
        <referenceTo>Assessment_Domain_Result__c</referenceTo>
        <relationshipLabel>Assessment Response</relationshipLabel>
        <relationshipName>Assessment_Response</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Assessment__c</fullName>
        <description>Relationship to Assessment Junction Object</description>
        <label>Assessment</label>
        <referenceTo>Assessment__c</referenceTo>
        <relationshipLabel>Assessment Response</relationshipLabel>
        <relationshipName>Assessment_Response</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_Risk__c</fullName>
        <label>Description of Risk</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OptionID__c</fullName>
        <description>optional to attach the original assessment option to the record</description>
        <label>OptionID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_to_reduce_Risk__c</fullName>
        <label>Plan to Reduce Risk</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>Assessment_Question__c</referenceTo>
        <relationshipLabel>Assessment Response</relationshipLabel>
        <relationshipName>Question</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RatingDate__c</fullName>
        <label>RatingDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RatingNumber__c</fullName>
        <label>RatingNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>Rating / Score entered by user</description>
        <label>Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_FCT_services_before__c</fullName>
        <label>Received FCT services before?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Person_Being_Served_Othe__c</fullName>
        <label>Relationship to Person Being Served Othe</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Person_Being_Served__c</fullName>
        <label>Relationship to Person Being Served</label>
        <picklist>
            <picklistValues>
                <fullName>Full Sibling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adopted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half sibling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step-sibling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response_Has_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Response Has Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ScoreOld__c</fullName>
        <formula>CASE( Rating__c , &apos;0&apos;, 0, &apos;1&apos;, 1, &apos;2&apos;, 2, &apos;3&apos;, 6, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score Old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Check__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A field for confirming that no duplicate entries are saved for assessments.</description>
        <label>Unique Check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Yes_No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Yes/No</label>
        <type>Checkbox</type>
    </fields>
    <label>Assessment Response</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Rating__c</columns>
        <columns>Assessment__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>AssessmentResponseID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Response</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AssessmentApproved</fullName>
        <active>true</active>
        <description>A validation rule to prevent changes to assessments when they have been approved.</description>
        <errorConditionFormula>ISPICKVAL( Assessment__r.Approval_Status__c , &apos;Approved&apos;)</errorConditionFormula>
        <errorMessage>This assessment has already been submitted and cannot be edited.  For assistance, please contact a system administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AssessmentLocked</fullName>
        <active>true</active>
        <description>A validation rule to prevent changes to assessment responses when the assessment has been locked.</description>
        <errorConditionFormula>Assessment__r.Locked__c</errorConditionFormula>
        <errorMessage>Assessment Response values cannot be inserted or updated when the Assessment is in a locked state.  Please contact your supervisor and request that the assessment be unlocked if you need to make changes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RISK_Plan_to_reduce_Risk</fullName>
        <active>true</active>
        <errorConditionFormula>Rating__c = &apos;Presents a Risk&apos; &amp;&amp;  
ISBLANK(  Plan_to_reduce_Risk__c ) &amp;&amp;
LOWER(TEXT( Assessment__r.Status__c )) = &apos;locked&apos;</errorConditionFormula>
        <errorDisplayField>Plan_to_reduce_Risk__c</errorDisplayField>
        <errorMessage>Plan to reduce Risk must be filled out</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Risk_Description_of_Risk</fullName>
        <active>true</active>
        <errorConditionFormula>Rating__c = &apos;Presents a Risk&apos; &amp;&amp;  
ISBLANK( Description_of_Risk__c ) &amp;&amp;
LOWER(TEXT( Assessment__r.Status__c )) = &apos;locked&apos;</errorConditionFormula>
        <errorDisplayField>Description_of_Risk__c</errorDisplayField>
        <errorMessage>Description of Risk must be filled out</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Submitted</fullName>
        <active>true</active>
        <description>A rule to lock an assessment upon submission for approval.</description>
        <errorConditionFormula>Assessment__r.Submitted__c</errorConditionFormula>
        <errorMessage>This assessment has been submitted for approval and cannot be edited.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>test</fullName>
        <active>false</active>
        <errorConditionFormula>Rating__c = &apos;2&apos;</errorConditionFormula>
        <errorMessage>nooo</errorMessage>
    </validationRules>
</CustomObject>